--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,8 @@ body {
 }
 
 #myBtn:hover {
-  background-color: blue;
+  background-color: black;
+  color: red;
 }
 html {
   scroll-behavior: smooth;
