--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -156,6 +159,14 @@ box-shadow: 0 1px rgba(0, 0, 0, 0.3),
             border-radius: 5px;
             background: linear-gradient(#eeefef, #ffffff 10%);
 }
+.borderbox1 {
+box-shadow: 0 0px rgba(0, 0, 0, 0.3),
+            0 0px 7px rgba(0, 0, 0, 0.3),
+            inset 0 1px rgba(255,255,255,1),
+            inset 0 -3px 2px rgba(0,0,0,0.25);
+            border-radius: 5px;
+            background: linear-gradient(#eeefef, #ffffff 10%);
+}
 
 #myInput {
   box-sizing: border-box;
@@ -259,15 +270,16 @@ function filtersearchFunction() {
   }
 }
 </script>
+
 <div class="topnav" id="myTopnav">
-    <a style="background-color:#D63D17;" href="/"><img src="static/images/cart.png" alt="Logo" height="30"></a>
+    <a style="background-color:#D63D17;" href="/"><img src="static/images/cart.png" alt="Logo" height="28"></a>
     <a href="/home" style="color: white; font-size: 20px;">Market Egzoni</a>
     <a href="/ushqime" style="font-size: 20px;">Ushqime</a>
     <a href="/pije" style="font-size: 20px;">Pije</a>
     <a href="/higjienë" style="font-size: 20px;">Higjienë</a>
 
     <div style="float: right;">
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="height: 58px;">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()" style="height: 56px; padding-top: 18px;">
             <i class="fa fa-bars"></i>
         </a>
     </div>
@@ -280,8 +292,8 @@ function filtersearchFunction() {
         {% endif %}
     </div>
     <div style="float: right;">
-        <a href="/order" style="font-size: 20px;">Porosit <img src="static/images/order1.png" alt="Logo"
-                                                               height="29"></a>
+        <a href="/order" style="font-size: 20px;">Porosi {% if length == 0 %}<img src="static/images/order1.png" alt="Logo"
+                                                               height="25">{% endif %}{% if not length == 0 %}<span class="badge" style="background-color: white; color: #D63D17; height: 23px; width: 23px; border-radius: 50%; font-size: 17px;">{{length}}</span>{% endif %}</a>
     </div>
 
 
