--- a/templates/index.html
+++ b/templates/index.html
@@ -128,13 +128,10 @@ transform: rotate(45deg);
 </style>
 <body>
 <div class="main" id="section1" style="margin: 0px 0px 0px 0px;">
-    <p style="font-family: 'stencil'; text-align: center; color: #d62217; font-size: 65px; margin: 0px 0px 0px 0px; padding-top: 30px;"
-       id="btngroup1">
-        <img src="static/images/logo1.png" height="80px"> <img src="static/images/cart.png" height="70px"
-                                                               style="margin-bottom: 30px;"></p>
+
     <div style="text-align: right; margin-top: 20px; margin-right: 20px;">
         <div class="dropdown" style="text-align: left;" id="search">
-            <input onclick="mysearchFunction()" type="text" placeholder="Kërko..." id="myInput" onkeyup="filtersearchFunction()" class="borderbox">
+            <input onclick="mysearchFunction()" type="text" placeholder="Kërko..." id="myInput" onkeyup="filtersearchFunction()" class="borderbox1">
             <div id="myDropdown" class="dropdown-content">
                 <a href="home">Market Egzoni</a>
                 <a href="ushqime#qipsa">Qipsa</a>
@@ -150,6 +147,10 @@ transform: rotate(45deg);
             </div>
         </div>
     </div>
+    <p style="font-family: 'stencil'; text-align: center; color: #d62217; font-size: 65px; margin: 0px 0px 0px 0px; padding-top: 30px;"
+       id="btngroup1">
+        <img src="static/images/logo1.png" height="80px"> <img src="static/images/cart.png" height="70px"
+                                                               style="margin-bottom: 30px;"></p>
 
     <p style="font-family: 'stencil'; text-align: center; color: #d62217; font-size: 65px; margin: -80px 0px 0px 0px; padding-top: 30px;"
        id="btngroup">
