--- a/templates/base.html
+++ b/templates/base.html
@@ -293,7 +293,7 @@ function filtersearchFunction() {
     </div>
     <div style="float: right;">
         <a href="/order" style="font-size: 20px;">Porosi {% if length == 0 %}<img src="static/images/order1.png" alt="Logo"
-                                                               height="25">{% endif %}{% if not length == 0 %}<span class="badge" style="background-color: white; color: #D63D17; height: 23px; width: 23px; border-radius: 50%; font-size: 17px;">{{length}}</span>{% endif %}</a>
+                                                               height="25">{% endif %}{% if not length == 0 %}<span class="badge" style="background-color: white; color: #D63D17; height: 23px; width: auto; border-radius: 50%; font-size: 17px;">{{length}}</span>{% endif %}</a>
     </div>
 
 
