--- a/templates/Welcome.html
+++ b/templates/Welcome.html
@@ -1,7 +1,8 @@
 <div class="container">
     <p style="font-size: 30px; margin-bottom: 20px;">Përshëndetje <strong style="font-size: 33px;">{{user}}</strong></p>
     <p>Regjistrimi juaj në webfaqen tonë është kryer me sukses.</p>
-    <p>Ne dhe stafi ynë shpresojmë që të keni një eksperiencë sa më të mirë, dhe jemi të gatshëm të ju ndihmojmë për çdo kërkesë që keni.</p>
+    <p>Ne dhe stafi ynë shpresojmë që të keni një eksperiencë sa më të mirë, dhe jemi të gatshëm të ju ndihmojmë për çdo
+        kërkesë që keni.</p>
     <p>Rrjetet tona të kontaktit mund ti gjeni më poshtë:<br>
         <strong>Email: eol.nuha22@gmail.com</strong><br>
         <strong>Numri i telefonit: 049793208</strong>
@@ -10,4 +11,10 @@
     <h2><b><i>Market Egzoni</i></b></h2>
     <hr>
 </div>
+
+
+
+
+
+
 
