--- a/templates/index.html
+++ b/templates/index.html
@@ -125,25 +125,44 @@ transform: rotate(45deg);
 
 
 
+
+
 </style>
 <body>
 <div class="main" id="section1" style="margin: 0px 0px 0px 0px;">
 
     <div style="text-align: right; margin-top: 20px; margin-right: 20px;">
         <div class="dropdown" style="text-align: left;" id="search">
-            <input onclick="mysearchFunction()" type="text" placeholder="Kërko..." id="myInput" onkeyup="filtersearchFunction()" class="borderbox1">
+            <input onclick="mysearchFunction()" type="text" placeholder="Kërko..." id="myInput"
+                   onkeyup="filtersearchFunction()" class="borderbox1">
             <div id="myDropdown" class="dropdown-content">
                 <a href="home">Market Egzoni</a>
-                <a href="ushqime#qipsa">Qipsa</a>
-                <a href="ushqime#keksa">Keksa</a>
-                <a href="ushqime#qokollada">Qokollada</a>
-                <a href="ushqime#embelsira">Ëmbëlsirat</a>
-                <a href="pije#gazuara">Pije të gazuara</a>
-                <a href="pije#lengje">Pije lëngje</a>
-                <a href="pije#alkoolike">Pije alkoolike</a>
-                <a href="higjienë#detergjenta">Detergjenta për rroba</a>
-                <a href="higjienë#paste">Pastë e dhëmbëve</a>
+                <a href="ushqime#bisfino">Bisfino</a>
+                <a href="pije#shkupi">Birra Shkupi</a>
+                <a href="pije#peja">Birra Peja</a>
+                <a href="pije#lasko">Birra Lasko</a>
+                <a href="higjienë#brushë">Brushë e dhëmbëve Colgate</a>
+                <a href="pije#cola">Coca Cola</a>
+                <a href="higjienë#detergjenta">Detergjent për rroba ABC</a>
                 <a href="higjienë#domestos">Domestos</a>
+                <a href="ushqime#doritos">Doritos</a>
+                <a href="pije#fanta">Fanta</a>
+                <a href="pije#frutti">Frutti</a>
+                <a href="pije#daniels">Jack Daniels</a>
+                <a href="ushqime#mars">Mars</a>
+                <a href="ushqime#merci">Merci</a>
+                <a href="ushqime#milky">Milky Way</a>
+                <a href="higjienë#paste">Pastë e dhëmbëve Colgate</a>
+                <a href="ushqime#patos">Patos</a>
+                <a href="pije#pepsi">Pepsi</a>
+                <a href="ushqime#plazma">Plazma</a>
+                <a href="ushqime#samba">Samba</a>
+                <a href="ushqime#snickers">Snickers</a>
+                <a href="pije#smirnoff">Smirnoff</a>
+                <a href="pije#sprite">Sprite</a>
+                <a href="ushqime#raffaello">Raffaello</a>
+                <a href="ushqime#romantic">Romantic</a>
+                <a href="ushqime#twix">Twix</a>
             </div>
         </div>
     </div>
